[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/go-do/scripts/info_node.gd" type="Script" id=1]

[node name="info_node" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -250.0
margin_right = 400.0
margin_bottom = 293.0
size_flags_horizontal = 0
size_flags_vertical = 0
popup_exclusive = true
window_title = "Tarea"
script = ExtResource( 1 )

[node name="title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 30.0
text = "Tarea"
align = 1
valign = 1

[node name="description" type="TextEdit" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 40.0
margin_right = -10.0
margin_bottom = 140.0
text = "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
wrap_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 150.0
margin_bottom = 180.0
size_flags_stretch_ratio = 5.0

[node name="Subtareas" type="Label" parent="HBoxContainer"]
margin_right = 82.0
margin_bottom = 34.0
text = "Subtareas"
align = 1
valign = 1

[node name="name_new_item" type="TextEdit" parent="HBoxContainer"]
margin_left = 86.0
margin_right = 486.0
margin_bottom = 34.0
rect_min_size = Vector2( 400, 0 )

[node name="add_new_item" type="Button" parent="HBoxContainer"]
margin_left = 490.0
margin_right = 510.0
margin_bottom = 34.0
text = "+"

[node name="delete_item" type="Button" parent="HBoxContainer"]
margin_left = 514.0
margin_right = 531.0
margin_bottom = 34.0
text = "-"

[node name="Tree" type="Tree" parent="."]
margin_left = 10.0
margin_top = 190.0
margin_right = 543.0
margin_bottom = 340.0
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_top = 350.0
margin_right = -10.0
margin_bottom = 375.0
rect_min_size = Vector2( 0, 25 )
alignment = 2

[node name="add_new_commentary" type="Button" parent="HBoxContainer3"]
margin_left = 360.0
margin_right = 540.0
margin_bottom = 25.0
text = "Agregar nuevo comentario"

[node name="box_commentary" type="ScrollContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 380.0
margin_right = -10.0
margin_bottom = 480.0
rect_min_size = Vector2( 0, 100 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="box_commentary"]
custom_constants/separation = 10
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 510.0
margin_right = -10.0
margin_bottom = 535.0
rect_min_size = Vector2( 0, 25 )
alignment = 2

[node name="finished" type="Button" parent="HBoxContainer2"]
margin_left = 467.0
margin_right = 530.0
margin_bottom = 25.0
text = "finished"

[node name="new_comment_window" type="WindowDialog" parent="."]
margin_right = 400.0
margin_bottom = 145.0
rect_min_size = Vector2( 400, 145 )
window_title = "Nuevo comentario"

[node name="VBoxContainer" type="VBoxContainer" parent="new_comment_window"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="TextEdit" type="TextEdit" parent="new_comment_window/VBoxContainer"]
margin_right = 380.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
wrap_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="new_comment_window/VBoxContainer"]
margin_top = 104.0
margin_right = 380.0
margin_bottom = 124.0

[node name="add_comment" type="Button" parent="new_comment_window/VBoxContainer/HBoxContainer"]
margin_right = 188.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Agregar comentario"

[node name="cancel" type="Button" parent="new_comment_window/VBoxContainer/HBoxContainer"]
margin_left = 192.0
margin_right = 380.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Cancelar"

[connection signal="popup_hide" from="." to="." method="_on_info_node_popup_hide"]
[connection signal="pressed" from="HBoxContainer/add_new_item" to="." method="_on_add_new_item_pressed"]
[connection signal="pressed" from="HBoxContainer/delete_item" to="." method="_on_delete_item_pressed"]
[connection signal="item_selected" from="Tree" to="." method="_on_Tree_item_selected"]
[connection signal="pressed" from="HBoxContainer3/add_new_commentary" to="." method="_on_add_new_commentary_pressed"]
[connection signal="pressed" from="HBoxContainer2/finished" to="." method="_on_finished_pressed"]
[connection signal="pressed" from="new_comment_window/VBoxContainer/HBoxContainer/add_comment" to="." method="_on_add_comment_pressed"]
